# CppPractice

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/WhiteBelt/Week1/: CMakeLists.txt
src/WhiteBelt/Week1/decimalDivision/: decimalDivision.cpp  decimalDivision.h
src/WhiteBelt/Week1/equation/: equation.h
src/WhiteBelt/Week1/marketCalc/: CMakeLists.txt  marketCalc.h
src/WhiteBelt/Week1/minString/: minString.cpp  minString.h
src/WhiteBelt/Week2/: CMakeLists.txt
src/WhiteBelt/Week2/factorial/: CMakeLists.txt  factorial.cpp  factorial.h
src/WhiteBelt/Week2/palindrome/: CMakeLists.txt  palindrome.cpp  palindrome.h
src/YellowBelt/Week1/: CMakeLists.txt
src/YellowBelt/Week1/avrTemp/: avrTemp.cpp  avrTemp.h  avrTempCoursera.cpp
src/YellowBelt/Week1/blockWeight/: blockWeight.cpp  blockWeight.h  blockWeightCoursera.cpp
src/YellowBelt/Week1/elemRef/: elemRef.cpp
src/YellowBelt/Week1/matrixSum/: matrixSum.cpp  matrixSum.h  matrixSumCoursera.cpp
src/YellowBelt/Week1/regionDatabase/: regionDatabase.cpp  regionDatabase.h  regionDatbaseCoursera.cpp
src/YellowBelt/Week1/square/: square.cpp  square.h
src/YellowBelt/Week2/: CMakeLists.txt
src/YellowBelt/Week2/palindromeTests/: palindromeTests.cpp
src/YellowBelt/Week2/personUnitTests/: personUnitTests.cpp
src/YellowBelt/Week2/programDecomposition/: programDecomposition.cpp  programDecomposition.h  programDecompositionCoursera.cpp
src/YellowBelt/Week2/rationalTests/: rationalTests.cpp
src/YellowBelt/Week2/realRootCountUnitTests/: realRootCountUnitTest.cpp
src/YellowBelt/Week3/: CMakeLists.txt
src/YellowBelt/Week3/classDeclaration/: rectangle.cpp  rectangle.h
src/YellowBelt/Week3/functionDefinition/: sum_reverse_sort.cpp  sum_reverse_sort_tests.cpp
src/YellowBelt/Week3/phoneNumber/: phoneNumberTests.cpp  phone_number.cpp  phone_number.h
src/YellowBelt/Week3/programDecomposition2/: bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
src/YellowBelt/Week3/testFramework/: test_runner.cpp  test_runner.h
src/YellowBelt/Week4/: CMakeLists.txt
src/YellowBelt/Week4/arithmetic/: arithmeticAmbiguous.cpp  arithmeticNormal.cpp
src/YellowBelt/Week4/greaterElement/: greaterElement.cpp  greaterElement.h  greaterElementTests.cpp
src/YellowBelt/Week4/groupStrings/: groupByString.cpp  groupBySymbol.cpp
src/YellowBelt/Week4/personDetails/: personDetails.cpp  personDetailsCoursera.cpp
src/YellowBelt/Week4/rearrangement/: rearrangementCoursera.cpp
src/YellowBelt/Week4/removeDuplicates/: removeDuplicates.h  removeDuplicatesSetCoursera.cpp  removeDuplicatesTest.cpp  removeDuplicatesUniqueCoursera.cpp
src/YellowBelt/Week4/splitString/: splitString.cpp  splitString.h  splitStringCoursera.cpp  splitStringTests.cpp
src/YellowBelt/Week4/vectorPart/: vectorPart.cpp  vectorPart.h  vectorPartCoursera.cpp  vectorPartTests.cpp
src/YellowBelt/Week5/: CMakeLists.txt
src/YellowBelt/Week5/figures/: figures.cpp
src/YellowBelt/Week5/inheritance/: inheritance.cpp
src/YellowBelt/Week5/notifier/: notifier.cpp
src/YellowBelt/Week5/refactoring/: refactoring.cpp
src/basicSum/: CMakeLists.txt
src/decimalDivision/: CMakeLists.txt
src/equation/: CMakeLists.txt  equation.cpp
src/marketCalc/: marketCalc.cpp
src/matrixSum/: CMakeLists.txt  matrixSum.cpp
src/minString/: CMakeLists.txt  minString.cpp
test/: CMakeLists.txt
test/WhiteBelt/: CMakeLists.txt
test/WhiteBelt/Week1/: CMakeLists.txt
test/WhiteBelt/Week1/basicSum/: CMakeLists.txt  basicSumTest.cpp
test/WhiteBelt/Week1/decimalDivision/: CMakeLists.txt
test/WhiteBelt/Week1/equation/: CMakeLists.txt
test/WhiteBelt/Week1/marketCalc/: CMakeLists.txt  marketCalcTest.cpp
test/WhiteBelt/Week1/minString/: CMakeLists.txt
test/WhiteBelt/Week2/: CMakeLists.txt
test/WhiteBelt/Week2/factorial/: CMakeLists.txt  factorialTest.cpp
test/WhiteBelt/Week2/palindrome/: CMakeLists.txt  palindromeTest.cpp
test/YellowBelt/Week1/: CMakeLists.txt
test/YellowBelt/Week1/avrTemp/: avrTempTest.cpp
test/YellowBelt/Week1/blockWeight/: blockWeightTest.cpp
test/YellowBelt/Week1/elemRef/: elemRefTest.cpp
test/YellowBelt/Week1/matrixSum/: matrixSumTest.cpp
test/YellowBelt/Week1/regionDatabase/: regionDatabaseTest.cpp
test/YellowBelt/Week1/square/: squareTest.cpp
test/basicSum/: CMakeLists.txt
test/decimalDivision/: CMakeLists.txt  decimalDivisionTest.cpp
test/equation/: CMakeLists.txt  equationTest.cpp
test/marketCalc/: CMakeLists.txt
test/minString/: CMakeLists.txt  minStringTest.cpp
