# Basic sum
add_executable(basicSum basicSum/basicSum.cpp basicSum/basicSum.h)

# Min string
add_executable(minString minString/minString.cpp minString/minString.h)

# Equation
add_executable(equation equation/equation.cpp equation/equation.h)

# Decimal division
add_executable(decimalDivision decimalDivision/decimalDivision.cpp decimalDivision/decimalDivision.h)

# Market calc
add_executable(marketCalc marketCalc/marketCalc.cpp marketCalc/marketCalc.h)
