# Matrix Sum
add_executable(matrixSum matrixSum/matrixSum.cpp)

# Average Temperature
add_executable(avrTemp avrTemp/avrTemp.cpp avrTemp/avrTemp.h)
add_executable(avrTempCoursera avrTemp/avrTempCoursera.cpp)

# Block Weight
add_executable(blockWeight blockWeight/blockWeight.cpp blockWeight/blockWeight.h)
add_executable(blockWeightCoursera blockWeight/blockWeightCoursera.cpp)

# Region Database
add_executable(regionDatabase regionDatabase/regionDatabase.cpp regionDatabase/regionDatabase.h)

# Square
add_executable(square square/square.cpp square/square.h)
