# Program Decomposition
add_executable(programDecomposition programDecomposition/programDecomposition.cpp programDecomposition/programDecomposition.h)

# Real Root Count Unit Tests
add_executable(realRootCountUnitTests realRootCountUnitTests/realRootCountUnitTest.cpp)

# Person Unit Tests
add_executable(personUnitTests personUnitTests/personUnitTests.cpp)

# Rational Unit Tests
add_executable(rationalTests rationalTests/rationalTests.cpp)

# Palindrome Unit Tests
add_executable(palindromeTests palindromeTests/palindromeTests.cpp)
